--- a/addons/xbb/template/apply.html
+++ b/addons/xbb/template/apply.html
@@ -11,26 +11,32 @@
                     <th class="text-center">手机号</th>
                     <th class="text-center">维修项目</th>
                     <th class="text-center">常驻地址</th>
-                    <th class="text-center">服务区域</th>
                     <th class="text-center">营业时间</th>
                     <th class="text-center">起步价</th>
                     <th class="text-center">银行卡号</th>
                     <th class="text-center">银行</th>
-                    <th class="text-center">身份证照</th>
-                    <th class="text-center">营业执照</th>
                     <th class="text-center">城市</th>
                     <th class="text-center">审核状态</th>
                     <th class="text-center">操作</th>
                 </tr>
             </thead>
             <tbody>
-                {loop $bank $index $item}
+                {loop $apply $index $item}
                 <tr>
                     <td class="text-center">{$item['name']}</td>
-                    <td class="text-center">{php echo date('Y-m-d H:i:s',$item['create_time'])}</td>
+                    <td class="text-center">{$item['telphone']}</td>
+                    <td class="text-center">{$item['project_name']}</td>
+                    <td class="text-center">{$item['address']}</td>
+                    <td class="text-center">{$item['business_hours']}</td>
+                    <td class="text-center">{$item['start_price']}</td>
+                    <td class="text-center">{$item['bank_card']}</td>
+                    <td class="text-center">{$item['bank_name']}</td>
+                    <td class="text-center"></td>
                     <td class="text-center">
-                        <button type="button" class="btn btn-primary btn-xs btn-edit" data-toggle="modal" data-target="#myModal" id="{$item['id']}">编辑</button>
-                        <button type="button" class="btn btn-danger btn-xs btn-del" id="{$item['id']}">删除</button>
+                        <button type="button" class="btn btn-primary btn-xs">{$item['status_ch']}</button>
+                    </td>
+                    <td class="text-center">
+                        <button type="button" class="btn btn-primary btn-xs btn-edit" data-toggle="modal" data-target="#myModal" id="{$item['id']}">查看</button>
                     </td>
                 </tr>
                 {/loop}
@@ -39,4 +45,37 @@
         {$page}
     </div>
 </div>
+<!-- 模态框（Modal） -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title" id="myModalLabel">查看详情</h4>
+            </div>
+            <div class="modal-body">
+                <form class="form-horizontal" role="form">
+                    <label for="firstname" class="col-sm-2 control-label">名称</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" name="name" placeholder="请输入银行名称">
+                    </div> 
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {template 'common/footer'}
+
+<script>
+    $(function () {
+        $('.btn-edit').click(function () {
+            var consultid = $(this).attr('consultid');
+            $.get("{php echo $this->createWebUrl('consult')}" + "&action=get&consultid=" + consultid, function (result) {
+                var data = $.parseJSON(result);
+                $(".phone").html(data.phone);
+                $('.addtime').html(data.addtime);
+                $('.content').html(data.content);
+            });
+        });
+    });
+</script>
