--- a/addons/xbb/template/bank.html
+++ b/addons/xbb/template/bank.html
@@ -42,7 +42,7 @@
                 <h4 class="modal-title" id="myModalLabel"></h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal" role="form" action="{php echo $this->createWebUrl('bank');}&action=save" method="post">
+                <form class="form-horizontal" id="thisTax" role="form" action="{php echo $this->createWebUrl('bank');}&action=save" method="post">
                     <div class="form-group">
                         <label for="firstname" class="col-sm-2 control-label">名称</label>
                         <div class="col-sm-10">
@@ -90,6 +90,28 @@
                     }
                 });
             });
+        });
+
+        $("#thisTax").validate({
+            rules: {
+                name: {
+                    required: true
+                }
+            },
+            messages: {
+                name: {
+                    required: '请填写银行名称'
+                }
+            },
+            //重写showErrors
+            showErrors: function (errorMap, errorList) {
+                $.each(errorList, function (i, v) {
+                    layer.tips(v.message, v.element, {time: 2000, tips: [1, '#EA2000']});
+                    return false;
+                });
+            },
+            /* 失去焦点时不验证 */
+            onfocusout: false
         });
     });
 </script>
