--- a/addons/xbb/template/project.html
+++ b/addons/xbb/template/project.html
@@ -45,7 +45,7 @@
                 <h4 class="modal-title" id="myModalLabel"></h4>
             </div>
             <div class="modal-body">
-                <form class="form-horizontal" role="form" action="{php echo $this->createWebUrl('project');}&action=save" method="post">
+                <form class="form-horizontal" id="thisTax" role="form" action="{php echo $this->createWebUrl('project');}&action=save" method="post">
                     <div class="form-group">
                         <label for="firstname" class="col-sm-2 control-label">名称</label>
                         <div class="col-sm-10">
@@ -110,6 +110,42 @@
                     }
                 });
             });
+        });
+
+        $("#thisTax").validate({
+            rules: {
+                name: {
+                    required: true
+                },
+                imgurl: {
+                    required: true
+                },
+                sort: {
+                    required: true,
+                    digits: true
+                }
+            },
+            messages: {
+                name: {
+                    required: '请填写服务项目名称'
+                },
+                imgurl: {
+                    required: '请上传图片'
+                },
+                sort: {
+                    required: '请填写排序',
+                    digits: '请输入整数'
+                }
+            },
+            //重写showErrors
+            showErrors: function (errorMap, errorList) {
+                $.each(errorList, function (i, v) {
+                    layer.tips(v.message, v.element, {time: 2000, tips: [1, '#EA2000']});
+                    return false;
+                });
+            },
+            /* 失去焦点时不验证 */
+            onfocusout: false
         });
     });
 </script>
